--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,14 @@ on: [push, pull_request]
 jobs:
   build:
     name: Run Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.17
+        go-version: ^1.23.2
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Make test.sh executable
       run: chmod +x test.sh
     - name: Run test.sh
